index | fixed border with absolute positioning overlapping links

--- a/src/css/main/_activities.scss
+++ b/src/css/main/_activities.scss
@@ -16,34 +16,46 @@
   &__item {
     position     : relative;
     border-radius: 7px;
-    padding      : 30px;
+    padding      : 15px;
     box-shadow   : 0px 0px 6px 0px rgba($black, 0.1);
 
     @media (max-width:768px) {
-      padding      : 15px;
+      padding      : 10px;
       border-radius: 5px;
     }
 
-    &::before {
-      content      : '';
-      position     : absolute;
-      top          : 15px;
-      right        : 15px;
-      bottom       : 15px;
-      left         : 15px;
+    &__border {
+      height: 100%;
+      padding: 20px;
       border-radius: 7px;
       border       : 1px solid $blue-light;
-      z-index      : 1;
 
       @media (max-width:768px) {
-        top          : 10px;
-        right        : 10px;
-        bottom       : 10px;
-        left         : 10px;
+        padding: 5px;
         border-radius: 5px;
-        ;
       }
     }
+
+    // &::before {
+    //   content      : '';
+    //   position     : absolute;
+    //   top          : 15px;
+    //   right        : 15px;
+    //   bottom       : 15px;
+    //   left         : 15px;
+    //   border-radius: 7px;
+    //   border       : 1px solid $blue-light;
+    //   z-index      : 1;
+
+    //   @media (max-width:768px) {
+    //     top          : 10px;
+    //     right        : 10px;
+    //     bottom       : 10px;
+    //     left         : 10px;
+    //     border-radius: 5px;
+    //     ;
+    //   }
+    // }
   }
 
   &__item:nth-child(-n+3) {
